--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* autoprefixer grid: autoplace */
+
 body {
   margin: 0;
   padding: 0;
@@ -20,4 +22,19 @@ code {
   width: 100vw;
   height: 100vh;
   cursor: pointer;
+}
+
+.ReactModal__Content .video_wrapper {
+  padding-bottom: 56.25%;
+  position: relative;
+  width: auto !important;
+  height: auto !important;
+}
+
+.video_wrapper iframe, .video_wrapper video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
